# pyx2cscope

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  FW_Support.html  HW_Support.html  README - GUI.md  README.md  classes.dot  classes.html  conf.py  development.html  documentation.html  example.html  genindex.html  gui_qt.html  gui_web.html  how_to.html  index.html  install.html  introduction.html  objects.inv  packages.dot  packages.html  py-modindex.html  pyproject.toml  pyx2cscope_linux.spec  pyx2cscope_win.spec  quality.txt  requirements.txt  scripting.html  search.html  searchindex.js  submodule_howto.txt
.claude/: settings.local.json
.github/workflows/: buildexe.yml  documentation.yml  release.yml
_modules/: index.html  pyx2cscope.html
_modules/pyx2cscope/: __main__.html  utils.html  x2cscope.html  xc2scope.html
_modules/pyx2cscope/parser/: Elf16Parser.html  Elf32Parser.html  Elf_Parser.html  TestarraySupport.html  arraySupport.html  elf16_parser.html  elf32_parser.html  elf_parser.html  elfparser_try_unified.html  generic_parser.html
_modules/pyx2cscope/variable/: variable.html  variable_factory.html
_sources/: gui_qt.md.txt  index.rst.txt  install.rst.txt  scripting.rst.txt
_sources/autoapi/pyx2cscope/: index.rst.txt
autoapi/: index.html
autoapi/pyx2cscope/: index.html
autoapi/pyx2cscope/__main__/: index.html
autoapi/pyx2cscope/parser/: index.html
autoapi/pyx2cscope/utils/: index.html
autoapi/pyx2cscope/variable/: index.html
autoapi/pyx2cscope/x2cscope/: index.html
autoapi/pyx2cscope/xc2scope/: index.html
doc/: .$class_chart.drawio.bkp  FW_Support.md  HW_Support.md  Project plan_new.xlsx  api.rst  class_chart.drawio  conf.py  development.md  documentation.md  example.md  gui_qt.md  gui_web.md  how_to.md  how_to.rst  index.rst  install.rst  introduction.md  scopeview.md  scripting.md  scripting.rst  watchview.md
doc/images/: pyx2cscope_logo.xcf
examples/: get_data_raw_blinkyTest.py  minimal_gui.py  plotting_and_saving.py
pyx2cscope/: .buildinfo  __init__.py  __main__.py  genindex.html  how_to.html  index.html  introduction.html  objects.inv  py-modindex.html  pyx2cscope.py  search.html  searchindex.js  utils.py  x2cscope.py  xc2scope.py
pyx2cscope/.doctrees/: environment.pickle  how_to.doctree  index.doctree  introduction.doctree
pyx2cscope/.doctrees/autoapi/: index.doctree
pyx2cscope/_modules/: index.html  pyx2cscope.html
pyx2cscope/_modules/pyx2cscope/: __main__.html  xc2scope.html
pyx2cscope/_sources/: how_to.md.txt  index.rst.txt  introduction.md.txt
pyx2cscope/_sources/autoapi/: index.rst.txt
pyx2cscope/autoapi/: index.html
pyx2cscope/autoapi/pyx2cscope/: index.html
pyx2cscope/examples/: SFR_Example.py  Save_parameter_test.py  TestHarness.py  array_example.py  auto_tuner.py  can_demo.py  check_compatibility.py  check_date.py  demo.py  enum_example.py  exampleMCAF.py  exampleMCFG.py  example_new.py  export_import_variables.py  get_data_raw_blinkyTest.py  get_device_id.py  live_scope.py  load_reload_variables.py  minimal_gui.py  plotting_and_saving.py  pyX2CScope_demo.py  simplest.py  simplest_no_elf.py  step_response.py  tcp_client.py  tcp_demo.py  tcp_server.py  testing reboot.py  testingArray.py  udp_client.py  utils.py
pyx2cscope/examples/notebooks/: README.md  mcaf_hil_example.ipynb
pyx2cscope/gui/: Minimal_GUI.py  __init__.py  minimal_gui.py
pyx2cscope/gui/FOC_GUI/: FOC_GUI.py  detachable_gui.py  foc_gui.py  new_try.json
pyx2cscope/parser/: Elf16Parser.py  Elf32Parser.py  Elf_Parser.py  TestarraySupport.py  __init__.py  arraySupport.py  comparision elf.py  elf16_parser.py  elf32_parser.py  elf_parser.py  elfparser_try_unified.py  generic_parser.py  unified_parser.py
pyx2cscope/tests/: TestHarness.py  Test_Save_parameter.py  testing_getRamArray.py
pyx2cscope/variable/: __init__.py  variable.py  variable_factory.py  vartypes.py
scripts/: build.py  startWebInterface.bat  update_version.py
tests/: __init__.py  conftest.py  test_can_reconnection.py  test_cli.py  test_install.py  test_parser.py  test_pyx2cscope_class.py  test_qt_gui.py  test_spec_imports.py  test_thread_safety.py  test_web_gui.py
tests/data/: MCAF_ZSMT_dsPIC33CK.elf  MC_FOC_DYNO_SAME54_MCLV2.elf  __init__.py  dashboard_layout.json  dsPIC33ak128mc106_foc.elf  mc_foc_sl_fip_dspic33ck_mclv48v300w.elf  qspin_foc_same54.elf
tests/utils/: SerialStub.py  __init__.py  comparision_elf.py  serial_stub.py
(+172 files in other folders)
