[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyx2cscope"
version = "0.4.2"
description = "python implementation of X2Cscope"
authors = [
  "Yash Agarwal <yash.agarwal@microchip.com>",
  "Edras Pacola",
  "Christoph Baumgartner",
  "Mark Wendler",
]
readme = "README.md"
packages = [{include = "pyx2cscope"}]

license = "Proprietary"

homepage = "https://x2cscope.github.io/"
documentation = "https://x2cscope.github.io/pyx2cscope"
repository = "https://github.com/X2Cscope/pyx2cscope"

[tool.poetry.scripts]
pyx2cscope = 'pyx2cscope.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
pyelftools = "^0.31"
numpy = "^1.26.0"
matplotlib = "^3.7.2"
PyQt5 = "^5.15.9"
pyqtgraph= "^0.13.7"
mchplnet = "0.2.1"
flask = "^3.0.3"


[tool.ruff]
line-length = 120
# only allow the specified pydocstyle convention
lint.pydocstyle.convention = "google"
lint.select = ["D"]
# I - isort style for imports
# N - pep8-naming
# F - pyflakes
# D - pydocstyle
# PL - pylint
lint.extend-select = ["I", "N", "F", "PL", "D"]
exclude = ["mchplnet/*"]
lint.ignore = ["I001", "PLW0603", "PLW0602", "PLR0913"] #TODO fix the import issue. no errors on local machine and errors on github action.


