[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyx2cscope"
version = "0.7.0"
description = "python implementation of X2Cscope"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "LicenseRef-Proprietary"
authors = [
  {name = "Yash Agarwal"},
  {name = "Edras Pacola", email = "edras.pacola@microchip.com"},
  {name = "Christoph Baumgartner"},
  {name = "Mark Wendler"},
]
dependencies = [
  "pyserial>=3.5,<4.0",
  "python-can>=4.0.0,<5.0.0",
  "pyelftools>=0.31,<0.32",
  "pyyaml>=6.0.1,<7.0.0",
  "numpy>=1.26.0,<3.0.0",
  "matplotlib>=3.7.2,<4.0.0",
  "PyQt5>=5.15.9,<6.0.0",
  "pyqtgraph>=0.13.7,<0.14.0",
  "mchplnet==0.5.1",
  "flask>=3.0.3,<4.0.0",
  "flask-socketio>=5.3.4,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit==4.3.0",
  "pylint==3.1.0",
  "pytest==8.1.1",
  "pytest-mock==3.14.0",
  "pytest-qt==4.4.0",
  "ruff==0.4.4",
]
docs = [
  "astroid<4.0.0",
  "furo==2024.1.29",
  "myst-parser==2.0.0",
  "sphinx==7.2.6",
  "sphinx-autoapi==3.0.0",
  "sphinx-rtd-theme==2.0.0",
]
build = [
  "build>=1.2.2",
  "pyinstaller>=6.11.0",
  "requests==2.31.0",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://x2cscope.github.io/"
Documentation = "https://x2cscope.github.io/pyx2cscope"
Repository = "https://github.com/X2Cscope/pyx2cscope"

[project.scripts]
pyx2cscope = "pyx2cscope.__main__:main"

[tool.setuptools.packages.find]
include = ["pyx2cscope*"]

[tool.ruff]
line-length = 120
# only allow the specified pydocstyle convention
lint.pydocstyle.convention = "google"
lint.select = ["D"]
# I - isort style for imports
# N - pep8-naming
# F - pyflakes
# D - pydocstyle
# PL - pylint
lint.extend-select = ["I", "N", "F", "PL", "D"]
exclude = ["mchplnet/*"]
lint.ignore = ["PLR0913"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
pythonpath = ["."]
